css/integrated/src/sidebar.css
#chat-sidebar {
	top:45px;
	z-index: 9000;
	width: 250px;
	height: 100%;
	box-sizing: border-box;
	background-color: #F5F5F5;
	padding-bottom: 44px;
	-moz-user-select: none;
	position: fixed;
	right:0px;
}

#chat-sidebar-toggle {
	background-color: #1D2D44;
	height: 100%;
	position: fixed;
	width: 10px;
	z-index: 9000;
	top: 45px;
}

.chat-sidebar-toggle-visible {
	right:250px;
}

.chat-sidebar-toggle-hidden {
	right:0px;
}

#chat-sidebar ul li {
	padding:10px;
}

#chat-sidebar > ul ul {
	display: block;
}

#chat-sidebar > ul {
	float: left;
	width: 250px;
	position: absolute;
	top: 145px;
	bottom: 350px;
	height: auto !important;
	background-color: #F5F5F5;
	overflow-y: auto;
}

/*#chat-sidebar {*/
	/*float: left;*/
	/*position:relative;*/
/*}*/


.filter-button {
	margin: 1px 0px 5px;
	display: inline-block;
	float: left;
	border-bottom-left-radius: 0px;
	border-top-left-radius: 0px;
	height: 30px !important;
}

.filter-field {
	float:left;
}

#filter-container {
	height:100px;
	padding:10px;
	margin: 0;
	background-color:#F5F5F5;
	z-index: 100;
	top:45px;
	position:fixed;
}
#filter-container input {
	margin:0;
	width:215px;
	margin-top:10px;
}

.conv-list-active {
	background-color: #dadada !important;
}

.conv-list-item {
	height: 60px;
}

.conv-list-item-buttons div {
	float:right;
}
.conv-list-item-buttons {
	width:40px;
	height: 40px !important;
	position: absolute;
	right:0;
}

.heightInvite {
	height: 100px;
}

.online-dot-displayname-nav {
	position:static !important;
	margin-top:7px !important;
}

.expanded-icon{
	margin-left: 10px;
	margin-right: 20px;
}
#chat-window {
	height: 282px;
	padding: 10px;
	margin: 0px;
	background-color: #ffffff;
	z-index: 100;
	bottom: 68px;
	position:fixed;
	width:250px;
	overflow-y: auto;
	border-top: 10px solid #dadada;
}

#chat-window-footer {
	position:fixed;
	height: 68px;
	bottom: 0;
	width: 100%;
	background-color: #EEE;
	border-top: #D2D2D2 solid 1px;
	z-index: 100;

}


#chat-window-footer textarea, #chat-window-footer button {
	float:left;
}

#chat-window-footer textarea {
	width:190px;
}

#chat-window-footer button {
	width:55px;
	height:55px;
}

